[gd_scene load_steps=9 format=3 uid="uid://dqdap6ocg62a"]

[ext_resource type="Texture2D" uid="uid://boructjyduyus" path="res://Assets/Objects/Turtle.png" id="1_p1kev"]
[ext_resource type="Script" path="res://Scripts/Objects/Turtle.gd" id="1_ujnbd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hydo6"]
atlas = ExtResource("1_p1kev")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_okuip"]
atlas = ExtResource("1_p1kev")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfurv"]
atlas = ExtResource("1_p1kev")
region = Rect2(16, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y5r4n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hydo6")
}],
"loop": true,
"name": &"Hide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okuip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfurv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8v5f"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixicx"]
size = Vector2(16, 14)

[node name="Turtle" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_ujnbd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y5r4n")
animation = &"Hide"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_o8v5f")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_ixicx")
debug_color = Color(0, 0.643137, 0.305882, 0.419608)

[node name="HitboxTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="HitboxTimer" to="." method="_on_hitbox_timer_timeout"]
